[package]
edition = "2021"
name = "lmnr-baml"
version.workspace = true
authors.workspace = true
description.workspace = true

### pyo3 build configuration

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "lmnr_baml"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
#  Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use lmnr_baml;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib", "lib"]

###

license-file.workspace = true

[dependencies]
internal-baml-core = { path = "../baml-core" }
internal-baml-jinja = { path = "../jinja" }
jsonish = { path = "../jsonish" }
baml-types = { path = "../baml-types" }
anyhow = "1.0"
either = "1.8.1"
pyo3 = { version = "0.22.2", features = ["extension-module"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
base64 = "0.13.0"
dissimilar = "1.0.4"
expect-test = "1.1.0"
env_logger.workspace = true
indoc.workspace = true
either = "1.8.1"
strip-ansi-escapes = "0.2.0"

[build-dependencies]
pyo3-build-config = "0.22.2"