[project]
name = "lmnr_baml"
version = "0.40.0"
description = "LMNR BAML for Python"
readme = "README.md"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python_src"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so).
features = ["pyo3/extension-module"]

[project.scripts]
baml-cli = "baml_py:invoke_runtime_cli"
