[package]
edition = "2021"
name = "internal-baml-schema-ast"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
internal-baml-diagnostics = { path = "../diagnostics" }
baml-types = { path = "../baml-types" }
serde_json.workspace = true
serde.workspace = true


pest = "2.1.3"
pest_derive = "2.1.0"


[features]
debug_parser = []
# default = ["debug_parser"]
